--- a/BTL-GAME/BTL-GAME.vcxproj.filters
+++ b/BTL-GAME/BTL-GAME.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="attemp3\player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="attemp3\gun.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="attemp3\texturehandle.h">
@@ -47,6 +50,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="attemp3\player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="attemp3\gun.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
